Drafts can be saved and updated. They are not yet associated with a user though. Need to do that now...

--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -23,6 +23,13 @@
 			
 			$(function() {
 				
+				$(".notice").slideDown();
+				setTimeout ( function() {
+					$(".notice").slideUp();
+					$(".notice").fadeOut();
+				}, 3000 );
+				
+				
 				$("#search_box").focus(function() {
 					if(!cleared) {
 						$(this).val("");
