--- a/trailr/app/views/trails/_form.html.erb
+++ b/trailr/app/views/trails/_form.html.erb
@@ -110,7 +110,7 @@
 		$("#add_urls").click(add_url);
 		
 		
-		$("#post_back").submit(function() {
+		$(".post_back").submit(function() {
 						
 			var data = { title: "", links: [] };
 			data["title"] = $("#title").val();
@@ -149,7 +149,8 @@
 			});
 			
 			var string = JSON.stringify(data);
-			$("#trail_input").val(string); 
+			//$("#trail_input").val(string); 
+			$(".trail_input", this).val(string); 
 			
 						
 		});		
@@ -160,9 +161,9 @@
 
 <% end %>
 
-<% if !defined? edit then edit = false end %>
+<% if !defined? mode then mode = :new end %>
 <h2>
-	<%= if edit then "Edit Timeline" else "Create New Timeline" end %> 
+	<%= if mode == :edit then "Edit Timeline" elsif mode == :draft then "Update Draft" else "Create New Timeline" end %> 
 	<span style="font-size:12px; font-weight:normal">(<%= link_to "Other ways to create timelines", :controller => "home", :action => "jetpack" %>)</span>
 </h2>
 
@@ -242,26 +243,44 @@
 
 
 <div id="buttons">
-		<% if edit then %>
-			<% form_tag({:controller => "trails", :action => "update", :id => @trail.id }, {:id => "post_back"})  do %>
+		<% if mode == :edit  then %>
+			
+			<% form_tag({:controller => "trails", :action => "update", :id => @trail.id }, {:class => "post_back"})  do %>
 				<%= submit_tag "Update", { :class => "trail_button"} %>
-				<input type="hidden" name="trail" value="" id="trail_input"> 
+				<input type="hidden" name="trail" value="" class="trail_input"> 
 			<% end %>
-				<%= button_to "Cancel", {:controller => "trails", :action => "show", :id => @trail.id}, {:class => "trail_button"} %>
-		<% else %>
+			<%= button_to "Cancel", {:controller => "trails", :action => "show", :id => @trail.id}, {:class => "trail_button"} %>
+
+		<% elsif mode == :draft %>
+
+
+			<% form_tag({:controller => "trails", :action => "save_draft", :id => @trail.id }, {:class => "post_back"})  do %>
+				<%= submit_tag "Save", { :class => "trail_button"} %>
+				<input type="hidden" name="trail" value="" class="trail_input"> 
+			<% end %>
+
+			<% form_tag({:controller => "trails", :action => "publish_draft", :id => @trail.id }, {:class => "post_back"})  do %>
+				<%= submit_tag "Publish", { :class => "trail_button"} %>
+				<input type="hidden" name="trail" value="" class="trail_input"> 
+			<% end %>
+
+			
 		
+		<% else %>
+
 			<% if current_user %>
-				<% form_tag({:controller => "trails", :action => "create" }, {:id => "post_back"})  do %>
+				<% form_tag({:controller => "trails", :action => "create_draft" }, {:class => "post_back"})  do %>
 					<%= submit_tag "Save Draft", { :class => "trail_button"} %>
-					<input type="hidden" name="trail" value="" id="trail_input"> 
+					<input type="hidden" name="trail" value="" class="trail_input"> 
 				<% end %>
 			<% end %>
 			
 
-			<% form_tag({:controller => "trails", :action => "create" }, {:id => "post_back"})  do %>
+			<% form_tag({:controller => "trails", :action => "create" }, {:class => "post_back"})  do %>
 				<%= submit_tag "Publish", { :class => "trail_button"} %>
-				<input type="hidden" name="trail" value="" id="trail_input"> 
+				<input type="hidden" name="trail" value="" class="trail_input"> 
 			<% end %>
+
 		<% end %>
 		
 </div>
