--- a/trailr/app/views/trails/draft.html.erb
+++ b/trailr/app/views/trails/draft.html.erb
@@ -1,6 +1,2 @@
-<%= render :partial => "form", :locals => {:edit => false } %>
-
-
-<% content_for :happy do %>
-	Foo fooo foofo offof ffof offo
-<% end %>
+<%# TODO: Move all of the 'mode' code out of the _form partial and into their own partial and have form call based on params[:controller] %> 
+<%= render :partial => "form", :locals => {:mode => :draft } %>
