--- a/trailr/public/stylesheets/fullscreen.css
+++ b/trailr/public/stylesheets/fullscreen.css
@@ -1,5 +1,9 @@
 html, body {margin: 0px; padding: 0px; height: 100%; border: none;} 
 
+#source
+{
+	height:100%;
+}
 #page
 {
 	border:0px;
@@ -9,15 +13,49 @@ html, body {margin: 0px; padding: 0px; height: 100%; border: none;}
 	width:100%;
 	height:100%;
 }
+#timelinedivcon
+{
+	width:100%;
+	text-align:center;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+#timelinediv
+{
+	height:250px;
+	top:0px;
+	background-color:white;
+	text-align:center;
+}
+
+#timelinediv #close
+{
+	right:12px;float:right;
+	margin-top:235px;
+	font-family: Sans-serif; font-size: 10px;
+}
 
 #timeline
 {
 	width:900px;
 	height:200px;
-	position:absolute;
 	top:10px;
-	text-align:center;
+	left:50%;
+	margin-left:-450px;
 }
+
+#timelineHead #Tcontrols
+{
+	position:absolute;
+	top:0px;
+	width:100%;
+	height:30px;
+}
+#timelinediv #Tcontrols #prevL { cursor:pointer; float:left; margin-top:8px; margin-left:5px; text-align: left;}
+#timelinediv #Tcontrols #prevE { cursor:pointer; float:left; margin-top:8px; margin-left:50px; }
+#timelinediv #Tcontrols #nextE { cursor:pointer; float:right; margin-top:8px; margin-right:50px; }
+#timelinediv #Tcontrols #nextL { cursor:pointer; float:right; margin-top:8px; margin-right:5px; text-align: right;}
 
 #timelinedivcon
 {
@@ -28,19 +66,7 @@ html, body {margin: 0px; padding: 0px; height: 100%; border: none;}
 	display:block;
 	text-align:center;
 }
-#timelinediv
-{
-	height:250px;
-	width:100%;
-	top:0px;
-	background-color:white;
-}
-#timelinediv #close
-{
-	right:12px;float:right;
-	margin-top:235px;
-	font-family: Sans-serif; font-size: 10px;
-}
+
 #timelineHeadCon
 {
 	font-family: Sans-serif;
@@ -63,19 +89,6 @@ html, body {margin: 0px; padding: 0px; height: 100%; border: none;}
 	margin-top:5px;
 	font-size: 14px;
 }
-
-#timelineHead #Tcontrols
-{
-	position:absolute;
-	top:0px;
-	width:100%;
-	height:30px;
-	float:left;
-}
-#timelinediv #Tcontrols #prevL { cursor:pointer; float:left; margin-top:8px; margin-left:5px; text-align: left;}
-#timelinediv #Tcontrols #prevE { cursor:pointer; float:left; margin-top:8px; margin-left:50px; }
-#timelinediv #Tcontrols #nextE { cursor:pointer; float:right; margin-top:8px; margin-right:50px; }
-#timelinediv #Tcontrols #nextL { cursor:pointer; float:right; margin-top:8px; margin-right:5px; text-align: right;}
 
 .timelineIndicator
 {
