--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -84,7 +84,8 @@
 							<%# link_to image_tag("logo2.png", :border=>0), :controller => 'home', :action => 'index' %>
 							<%# link_to image_tag("logo3.png", :border=>0), :controller => 'home', :action => 'index' %>
 							<%# link_to image_tag("logo4.png", :border=>0, :height => 45), :controller => 'home', :action => 'index' %>
-							<%= link_to image_tag("logo5.png", :border=>0, :height => 30), :controller => 'home', :action => 'index' %>
+							<%# link_to image_tag("logo5.png", :border=>0, :height => 30), :controller => 'home', :action => 'index' %>
+							<%= link_to image_tag("logo6.png", :border=>0, :height => 50, :style => "position:relative;bottom:15px"), :controller => 'home', :action => 'index' %>							
 							<!--
 							<span style="position:absolute;top:40px;/*left:7px;*/left:18px;font-size:11px">
 								Everybody is a storyteller	
