Added user validation

--- a/trailr/app/views/home/index.html.erb
+++ b/trailr/app/views/home/index.html.erb
@@ -25,11 +25,13 @@
 
 
 <div class="space_10"></div>
+
+<div class="space_10"></div>
+
 <fieldset>
 	<div class="small_columns">
 		<div class="maincol">
 			
-			<%# examples = [79, 75, 53, 56, 54, 52, 51, 77, 55] %>
 			<% examples = [79, 53, 75, 90, 56, 84, 54, 88, 89 ] %>
 						
 			<% for example in examples do %>
@@ -39,30 +41,6 @@
 			<% end %>
 
 		</div>
-
-		<!--
-		<div class="sidecol">
-			<div class="round_box info_box" style="margin-top:15px">
-				<h3>What is LineHive?</h3>
-				
-				<ul>
-					<li><b>Lightweight timelines</b> anytime, anywhere, about anything.<br></li>
-					<li><b>Create</b> a timeline by just pasting links.<br></li>
-					<li><b>Share</b> a timeline's URL, <b>embed</b> it anywhere.<br><br></li>
-				</ul>
-				
-
-				<h3>What's new?</h3>
-				<ul>
-					<li><b>Jetpack</b> authoring extension for firefox.<br></li>
-					<li><b>Follow</b> us on <b><a href="http://twitter.com/linehive">Twitter</a></b>.<br><br></li>
-				</ul>
-				
-				
-				
-			</div>
-		</div>
-		-->
 		
 		<div class="clear"></div>
 	</div>
