--- a/trailr/public/stylesheets/signon.css
+++ b/trailr/public/stylesheets/signon.css
@@ -29,6 +29,10 @@
 
 .account_form .row {
 	clear:both;
+
+	vertical-align:text-top;
+
+
 	font-size:12px;
 	color:#222;
 	
@@ -36,6 +40,9 @@
 	margin-bottom:20px;
 	
 	padding:0px;
+	
+	height:20px;
+	line-height:20px;
 }
 
 .account_form .row .label {
@@ -45,6 +52,11 @@
 	float:left;
 	font-weight:bold;
 	padding-right:5px;
+}
+
+
+.fieldWithErrors * {
+	
 }
 
 .account_form .row .content {
