Changed the schema so that it is user.username not user.handle. I think that just makes more sense. I also fixed the validation of the firstname and lastname

--- a/trailr/app/views/user/account.html.erb
+++ b/trailr/app/views/user/account.html.erb
@@ -18,7 +18,7 @@
 			
 			<div class="left">
 				<h2>Username:</h2>	
-				<b><%= @user.handle %></b>
+				<b><%= @user.username %></b>
 			</div>
 			
 			<div class="right">
