--- a/trailr/app/views/user/signon.html.erb
+++ b/trailr/app/views/user/signon.html.erb
@@ -31,7 +31,7 @@
 				
 					<div class="row">
 						<label class="label">Username</label>
-						<%= text_field :user, :handle , {:class => "content" } %>
+						<%= text_field :user, :username , {:class => "content" } %>
 						<br>
 					</div>
 					
