--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -66,7 +66,7 @@
 				<% if @trail.user && @trail.user.id == current_user %>
 					You!
 				<% else %>
-					<%= @trail.user.handle %>				
+					<%= @trail.user.username %>				
 				<% end %>
 
 			</b>
