Played with the new timeline and made a copy in index2.html in mini_mockup. I also implemented the minitimeline in rails and it is currently powering the search results

--- a/trailr/app/views/search/results.html.erb
+++ b/trailr/app/views/search/results.html.erb
@@ -2,14 +2,31 @@
 	Search Results - <%= params[:query] %>
 <% end %>
 
+<% content_for :stylesheets do %>
+	<%= stylesheet_link_tag "miniline" %>
+
+<% end %>
+
+<h2>
+
+
 <h2>
 	Search Results: <%= params[:query] %>
 </h2>
 
-<ul>
-	<% for trail in @trails %>
+<div class="space_30"></div>
+
+<% for trail in @trails %>
+
+<%= render :partial => "trails/miniline", :locals => {:trail => trail} %>
+<div class="space_30"></div>
+
+
+<% end %>
+
+
+<!--<ul>
 	<li>
-		<%= link_to trail.caption, :controller => "trails", :action => "show", :id => trail.id  %>
+		<%# link_to trail.caption, :controller => "trails", :action => "show", :id => trail.id  %>
 	</li>
-	<% end %>
-</ul>
+</ul>-->
