--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 	<head>
 		<meta http-equiv="x-ua-compatible" content="IE=8">
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<title><%= yield :title %></title>
 		
 		<%= stylesheet_link_tag "global.css" %>	
@@ -164,7 +165,7 @@
 				
 				<% if !defined? @show_notifications then @show_notifications = true end %>
 				<% if @show_notifications  %>
-					<%= render :partial => "shared/notifications" %>
+				<%= render :partial => "shared/notifications" %>
 				<% end %>
 
 				<%= yield %>
