--- a/firefox_ext/crowdbrowse simple/skin/timeline_overlay2.css
+++ b/firefox_ext/crowdbrowse simple/skin/timeline_overlay2.css
@@ -1,9 +1,9 @@
 #timelineOverlay {
-  width: 600px;
-  height: 120px;
+  width: 920px;
+  height: 100px;
   overflow: hidden;
   border: 1px black solid;
-  background: transparent;
+  background: white;
   padding: 0px;
   -moz-appearance: none !important;
 }
