--- a/trailr/public/stylesheets/miniline.css
+++ b/trailr/public/stylesheets/miniline.css
@@ -30,6 +30,10 @@
 	font-weight:bold;
 }
 
+.mini_timeline .caption a {
+	text-decoration:none;
+}
+
 .mini_timeline .events {
 	text-align:center;
 
