--- a/trailr/public/stylesheets/layout.css
+++ b/trailr/public/stylesheets/layout.css
@@ -240,3 +240,38 @@
 	font-size:25px;
 	color:#959595;
 }
+
+
+.pagination {
+	width:100%;
+	text-align:center;
+	padding:0px 5px;
+	font-size:11px;
+}
+
+.pagination * {
+	padding:3px 5px;
+	min-width:15px;
+	display:inline-block;
+}
+
+.pagination a {
+
+	border:1px solid #CCC;
+	background-color:#fafafa;
+}
+
+.pagination .prev_page {
+	font-weight:bold;
+}
+
+.pagination .next_page {
+	font-weight:bold;
+}
+
+
+.pagination .current {
+	background-color: rgb(0, 129, 199);
+	color:white;
+	border:1px solid #CCC;
+}
