Added the front page to the admin page - updated the schema with indices for performance and also fixed the top logo link

--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -115,10 +115,12 @@
 		</div>
 		
 		<% if current_admin %>
-		<div class="urlbox" style="line-height:29px">
+		<div class="urlbox" style="line-height:27px">
 			<span class="label">Admin:</span>
 			<% form_tag :controller => "trails", :action => "save_admin_changes", :id => @trail.id do %>
 				
+				<%= check_box :trail, :front %>	
+				<span class="">Front Page</span>
 				<%= check_box :trail, :hidden %>
 				<span class="">Hidden</span>
 				<%= check_box :trail, :demoted %>	
