--- a/trailr/app/views/trails/index.html.erb
+++ b/trailr/app/views/trails/index.html.erb
@@ -1,4 +1,8 @@
 
+<% content_for :title do %>
+	LineHive: Hyperlink Haikus
+<% end %>
+
 
 <% content_for :stylesheets do %>
 	<%= stylesheet_link_tag "miniline" %>
