--- a/trailr/app/views/search/results.html.erb
+++ b/trailr/app/views/search/results.html.erb
@@ -18,7 +18,7 @@
 
 <% if @trails.size == 0 %>
 	<h3 style="text-align:center">
-		Sorry - could not find any trails for "<%= params[:query] %>"
+		Sorry - could not find any timelines for "<%= params[:query] %>"
 	</h3>
 	<div id="linehive_description">
 	
