--- a/firefox_ext/crowdbrowse simple/skin/timeline_overlay2.css
+++ b/firefox_ext/crowdbrowse simple/skin/timeline_overlay2.css
@@ -14,5 +14,13 @@
   height: 16px;
   position:absolute;
   margin-top: 4px;
-  margin-bottom: 26px;
+  
+}
+
+#timelineOverlay .lh-search-button{
+  list-style-image: url("images/search.png");
+  width: 16px;
+  height: 16px;
+  position:absolute;
+  margin-top: 4px;
 }
