Added the profile page

--- a/trailr/app/views/search/results.html.erb
+++ b/trailr/app/views/search/results.html.erb
@@ -11,7 +11,7 @@
 
 
 <h2>
-	Search Results: <%= params[:query] %>
+	Search Results for "<%= params[:query] %>"
 </h2>
 
 <div class="space_30"></div>
