--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -52,7 +52,7 @@
 				This is your timeline - <%= link_to "Edit", :controller => "trails", :action => "edit", :id => @trail.id %> &nbsp; |&nbsp;
 			<% end %>
 			
-			Tweak this timeline - <%= link_to "Remix", :controller => "trails", :action => "clone", :id => @trail.id %>
+			Tweak this timeline - <%= link_to "Make a Copy", :controller => "trails", :action => "clone", :id => @trail.id %>
 
 
 		</div>
