Added pagination to the search controller

--- a/trailr/app/views/search/results.html.erb
+++ b/trailr/app/views/search/results.html.erb
@@ -34,8 +34,5 @@
 
 <% end %>
 
-<!--<ul>
-	<li>
-		<%# link_to trail.caption, :controller => "trails", :action => "show", :id => trail.id  %>
-	</li>
-</ul>-->
+
+<%= will_paginate @trails %>
