--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -50,6 +50,8 @@
 		<div class="actions">
 			<% if @trail.user && @trail.user.id == current_user %>
 				This is your timeline - <%= link_to "Edit", :controller => "trails", :action => "edit", :id => @trail.id %> &nbsp; |&nbsp;
+			<% elsif current_admin %>
+				You are an admin - <%= link_to "Edit", :controller => "trails", :action => "edit", :id => @trail.id %> &nbsp; |&nbsp;
 			<% end %>
 			
 			Tweak this timeline - <%= link_to "Make a Copy", :controller => "trails", :action => "clone", :id => @trail.id %>
