--- a/firefox_ext/crowdbrowse simple/skin/overlay.css
+++ b/firefox_ext/crowdbrowse simple/skin/overlay.css
@@ -1,28 +1,19 @@
 #lh-button{
-	list-style-image: url("chrome://crowdbrowse/skin/linehive_desat.png");
+	list-style-image: url("chrome://crowdbrowse/skin/images/linehive_desat.png");
 }
 toolbar[iconsize="small"] #lh-button{
-  list-style-image: url("chrome://crowdbrowse/skin/linehive_desat_small.png");
+  list-style-image: url("chrome://crowdbrowse/skin/images/linehive_desat_small.png");
 }
+
 
 #timelineOverlay {
-  width:800px;
-  height: 100px;
+  width:900px;
+  height: 86px;
   overflow: hidden;
   background: white;
   padding: 0px;
   -moz-appearance: none !important;
 }
-
-#timelineOverlay2 {
-  width:800px;
-  height: 100px;
-  overflow: hidden;
-  background: white;
-  padding: 0px;
-  -moz-appearance: none !important;
-}
-
 
 #timelineOverlay .lh-close-button{
   list-style-image: url("images/close.png");
@@ -43,9 +34,9 @@ toolbar[iconsize="small"] #lh-button{
 
 #timelineOverlay .container
 {
-width: 800px;
-}
-#timelineOverlay value {
+	width: 900px;
+	margin:0;
+	padding:0;
 	font-family:Helvetica,Arial,Sans-Serif;
 	font-size:10px;
 }
@@ -61,16 +52,15 @@ width: 800px;
 	font-size:14px;
 	color:#0081C7;
 	font-weight:bold;
+	cursor:pointer;
 }
 
 #timelineOverlay #events {
 	text-align:center;
-
 	margin:auto;
-	height:48px;
+	height:58px;
 	background-color:#FAFAFA;
-	border:1px solid #CCC;
-	
+	border:1px solid #CCC;	
 	white-space: nowrap;
 	overflow:hidden;
 	overflow-x:auto;
@@ -80,19 +70,16 @@ width: 800px;
 #timelineOverlay #event {
 	white-space: normal;
 	line-height:normal;
-	
 	margin:0px;
 	padding:0px;
-	width:150px;
+	width:138px;
 	display:inline-block;
 	text-align:left;
-	margin-right:0px;
-	margin-left:5px;
-	padding-right:4px;
+	margin-right:5px;
+	cursor:pointer;
 }
 
 #timelineOverlay .highlight {
-	border:1px white solid;
 	opacity:1.0;
 	color:white;
 	background-color:#02A1EA;
@@ -103,7 +90,6 @@ width: 800px;
 	background-color:#EBA938;
 	opacity:1.0;
 	background-color:#F2D199;
-	cursor:pointer;
 }
 
 #timelineOverlay #event .thumbnail {
@@ -118,15 +104,20 @@ width: 800px;
 	background-position:center center;
 	height:48px;
 	width:48px;
-	
+}
+
+#timelineOverlay #event image {
+	background-position:center center;
+	height:48px;
+	width:48px;
 }
 
 #timelineOverlay #event .headline {
 	float:left;
 	height:48px;
-	width:87px;
+	width:74px;
 	overflow:hidden;
 	font-family:Helvetica,Arial,Sans-Serif;
 	font-size:10px;
-	white-space:pre-wrap;
+	line-height:10px;
 }
