First attempt at the static timeline page. I moved the css to classes and tweaked the timeline.js

--- a/trailr/app/views/trails/_form.html.erb
+++ b/trailr/app/views/trails/_form.html.erb
@@ -213,7 +213,7 @@
 
 
 <%= render :partial => "timeline", :locals => { :noedit => false } %>
-
+<%= render :partial => "template", :locals => { :noedit => false } %>
 
 
 <fieldset>
