--- a/trailr/app/views/trails/fullscreen.html.erb
+++ b/trailr/app/views/trails/fullscreen.html.erb
@@ -56,6 +56,7 @@
 		<div id="actions">
 		</div>
 		<%= render :partial => "timeline", :locals => { :noedit => true } %>
+		<%= render :partial => "template", :locals => { :noedit => true } %>
 	</div>
 </div>
 <div id="source">
