--- a/trailr/app/views/trails/embed.html.erb
+++ b/trailr/app/views/trails/embed.html.erb
@@ -35,7 +35,6 @@
 			$("#caption a").autoEllipsis();
 			timeline.show_meta = false;
 			timeline.init(<%= @articles.to_json %>);
-		
 		});
 
 	</script>
@@ -63,6 +62,7 @@
 		<div style="">
 
 		<%= render :partial => "timeline", :locals => { :noedit => true } %>
+		<%= render :partial => "template", :locals => { :noedit => true } %>
 
 		</div>
 	
