--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -84,7 +84,8 @@
 
 <div style="margin-top:50px;margin-bottom:15px">
 
-	<%= render :partial => "timeline", :locals => { :noedit => true } %>
+<%= render :partial => "timeline", :locals => { :noedit => true } %>
+<%= render :partial => "template", :locals => { :noedit => true } %>
 
 <% form_tag({:controller => "search", :action => "results"}, :id => 'searchURLForm' )  do %>
 	<input id="searchURL" type="hidden" name="query" value="lala" id="search_box" />
@@ -120,7 +121,6 @@
 		<div class="urlbox" style="line-height:27px">
 			<span class="label">Admin:</span>
 			<% form_tag :controller => "trails", :action => "save_admin_changes", :id => @trail.id do %>
-				
 				<%= check_box :trail, :front %>	
 				<span class="">Front Page</span>
 				<%= check_box :trail, :hidden %>
