--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -1,5 +1,5 @@
 
-#timeline {
+.timeline {
 	position:relative;
 	border:1px solid gray;
 	background-color:#F5F5F5;
@@ -19,7 +19,7 @@
 	
 }
 
-#timeline .events {
+.timeline .events {
 	padding:0px;
 	margin:0px;
 	margin:-1px;
@@ -33,15 +33,15 @@
 	overflow-y:hidden;
 }
 
-#timeline .insert {
+.timeline .insert {
 	display:none;
 }
 
-#timeline .info {
+.timeline .info {
 	display:none;
 }
 
-#timeline .empty {
+.timeline .empty {
 	
 	display:none;
 	
@@ -64,7 +64,7 @@
 	
 }
 
-#timeline .gap {
+.timeline .gap {
 	background-color:#F5F5F5;
 	/*background-color:red;*/
 	height:9px;
@@ -78,7 +78,7 @@
 	
 }
 
-#timeline .event {
+.timeline .event {
 	text-align:center;
 	position:absolute;
 	
@@ -90,7 +90,7 @@
 }
 
 
-#timeline .meta_callout {
+.timeline .meta_callout {
 	
 	z-index:300;
 	
@@ -110,7 +110,7 @@
 	opacity:0.95;
 }
 
-#timeline .meta {
+.timeline .meta {
 
 	display:none;
 
@@ -138,7 +138,7 @@
 	-moz-border-radius:5px;
 }
 
-#timeline .meta ul {
+.timeline .meta ul {
 	list-style: none;
 	padding:0px;
 	color:white;
@@ -146,7 +146,7 @@
 }
 
 
-#timeline .meta ul li a{
+.timeline .meta ul li a{
 
 	color:white;
 	font-size:12px;
@@ -154,21 +154,21 @@
 
 
 
-#timeline .meta .headline {
+.timeline .meta .headline {
 	
 }
 
-#timeline .meta .source {
+.timeline .meta .source {
 	text-decoration:underline;
 	margin-top:10px;
 	font-size:10px;
 }
 
-#timeline .meta .date {
+.timeline .meta .date {
 	
 }
 
-#timeline .thumbnail .pick_image {
+.timeline .thumbnail .pick_image {
 	
 	display:none;
 	
@@ -197,18 +197,18 @@
 }
 
 
-#timeline .thumbnail:hover .pick_image {
+.timeline .thumbnail:hover .pick_image {
 	display:block;
 }
 
-#timeline.noedit .thumbnail:hover .pick_image {
+.timeline.noedit .thumbnail:hover .pick_image {
 	display:none;
 }
 
 
 
 
-#timeline .thumbnail img {
+.timeline .thumbnail img {
 	position:absolute;
 	bottom:0px;
 	left:0px;
@@ -220,7 +220,7 @@
 	border:none;
 }
 
-#timeline .thumbnail {
+.timeline .thumbnail {
 
 	
 	vertical-align: bottom;
@@ -235,7 +235,7 @@
 }
 
 
-#timeline .tick {
+.timeline .tick {
 	
 	z-index:0;
 	
@@ -250,7 +250,7 @@
 }
 
 
-#timeline .event .headline {
+.timeline .event .headline {
 	position:absolute;
 	width:100%;
 	bottom:0px;
@@ -261,7 +261,7 @@
 	font-size:11px;
 }
 
-#timeline .event .headline textarea{
+.timeline .event .headline textarea{
 	height:100%;
 	width:95%;
 	text-align:center;
@@ -272,7 +272,7 @@
 }
 
 
-#timeline .date {
+.timeline .date {
 	font-weight:bold;
 	
 	position:absolute;
@@ -289,7 +289,7 @@
 
 
 
-#timeline .date .date_edit {
+.timeline .date .date_edit {
 	border:none;
 	border-bottom:1px solid #CCC;
 	padding:2px 0px 2px 0px;
@@ -309,7 +309,7 @@
 }
 
 
-#timeline .date .date_edit:focus {
+.timeline .date .date_edit:focus {
 	border:1px solid #CCC;
 	background-color:white;
 	
@@ -318,7 +318,7 @@
 }
 
 
-#timeline .date .date_edit:hover {
+.timeline .date .date_edit:hover {
 	border:1px solid #CCC;
 	background-color:white;
 
@@ -330,11 +330,11 @@
 
 
 
-#timeline.noedit .date .date_edit {
+.timeline.noedit .date .date_edit {
 	cursor: default;
 }
 
-#timeline.noedit .date .date_edit:focus {
+.timeline.noedit .date .date_edit:focus {
 	border:none;
 	border-bottom:1px solid #CCC;
 	padding:2px 0px 2px 0px;
@@ -342,16 +342,7 @@
 	
 }
 
-#timeline.noedit .date .date_edit:hover {
-	border:none;
-	border-bottom:1px solid #CCC;
-	padding:2px 0px 2px 0px;
-	background-color:transparent;
-	
-}
-
-
-#timeline.noedit .date .date_edit:hover {
+.timeline.noedit .date .date_edit:hover {
 	border:none;
 	border-bottom:1px solid #CCC;
 	padding:2px 0px 2px 0px;
@@ -360,8 +351,17 @@
 }
 
 
+.timeline.noedit .date .date_edit:hover {
+	border:none;
+	border-bottom:1px solid #CCC;
+	padding:2px 0px 2px 0px;
+	background-color:transparent;
+	
+}
 
-#timeline .cluster {
+
+
+.timeline .cluster {
 	text-align:center;
 	position:absolute;
 	
@@ -372,7 +372,7 @@
 	
 }
 
-#timeline .cluster img{
+.timeline .cluster img{
 	position:absolute;
 	left:2px;
 	cursor:pointer;
@@ -391,7 +391,7 @@
 
 
 
-#timeline #scale {
+.timeline #scale {
 	border-bottom:2px solid black;
 	position:absolute;
 	bottom:90px;
@@ -399,7 +399,7 @@
 }
 
 /*
-#timeline table, td, th
+.timeline table, td, th
 {
 	width:100%;
     border-color: black;
@@ -407,7 +407,7 @@
 }
 */
 
-#timeline .back {
+.timeline .back {
 	
 	text-align:center;
 	font-size:13px;
@@ -434,7 +434,7 @@
 }
 
 
-#timeline .close {
+.timeline .close {
 	
 	font-size:11px;
 	position:absolute;
@@ -452,12 +452,12 @@
 	
 }
 
-#timeline.noedit .close {
+.timeline.noedit .close {
 	display:none;
 }
 
 
-#timeline #image_picker_cover {
+.timeline #image_picker_cover {
 	height:100%;
 	width:100%;
 	position:fixed;
@@ -470,7 +470,7 @@
 }
 
 
-#timeline #image_picker { 
+.timeline #image_picker { 
 	
 	display:none;
 	
@@ -495,7 +495,7 @@
 }
 
 
-#timeline #image_picker .close {
+.timeline #image_picker .close {
 	float:right;
 	position:absolute;
 	
