--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -185,7 +185,7 @@
 					<li><%= link_to "Home", :controller => "home", :action => "index" %></li>
 					<li><%= link_to "Team", :controller => "home", :action => "team" %></li>	
 					<li><%= link_to "About", :controller => "home", :action => "about" %></li>
-					<li><%= link_to "JetPack", :controller => "home", :action => "jetpack" %></li>
+					<li><%= link_to "Extension", :controller => "home", :action => "extension" %></li>
 					<li><%= link_to "Create", :controller => "trails", :action => "new" %></li>
 					
 					<!--
