Abstracted the main timeline into its own partial so it can be rendered efficiently. A LOT OF CLEAN UP to the trail MVC subset is required at this point. Also, the timelines containing this link is not working atm

--- a/trailr/app/views/trails/_static_timeline.html.erb
+++ b/trailr/app/views/trails/_static_timeline.html.erb
@@ -1,4 +1,7 @@
 
+<h3>
+	<%= link_to trail.caption, {:controller => "trails", :action => "show", :id => trail.id}, {:style => "text-decoration:none;"} %>
+</h3>
 <div class="timeline noedit">
 	<div class="back">Back</div>
 	<div class="meta">
