--- a/trailr/app/views/trails/index.html.erb
+++ b/trailr/app/views/trails/index.html.erb
@@ -6,7 +6,30 @@
 
 <% content_for :stylesheets do %>
 	<%= stylesheet_link_tag "miniline" %>
+	<%= stylesheet_link_tag "timeline" %>
+	
 <% end %>
+
+
+<% content_for :javascripts do %>
+	<%= javascript_include_tag "timeline.js" %>
+	<%= javascript_include_tag "jquery.ui.datepicker.js" %>
+	<%= javascript_include_tag "jquery.easing.1.3.js" %>
+	<%= javascript_include_tag "jquery.autoellipsis.js" %>
+	
+	<script type="text/javascript" charset="utf-8">
+		$(function(){
+			
+			$(".timeline").each(function(index, element) {
+				timeline.render($(element));				
+			});
+			
+			$(".timeline .events .event > .headline").autoEllipsis();
+			
+		});
+	</script>
+<% end %>
+
 
 
 <div id="linehive_description">
@@ -21,7 +44,8 @@
 
 
 <% for trail in @trails do %>
-	<%= render :partial => "miniline", :locals => {:trail => trail} %>	
+	<%# render :partial => "miniline", :locals => {:trail => trail} %>	
+	<%= render :partial => "static_timeline", :locals => {:trail => trail} %>		
 	<div class="space_30"></div>
 <% end %>
 
