--- a/trailr/app/views/trails/index.html.erb
+++ b/trailr/app/views/trails/index.html.erb
@@ -41,6 +41,10 @@
 <div class="space_10"></div>
 
 
+<% form_tag({:controller => "search", :action => "results"}, :id => 'searchURLForm' )  do %>
+	<input id="searchURL" type="hidden" name="query" value="lala" id="search_box" />
+<% end %>
+
 
 
 <% for trail in @trails do %>
