Fixed a big bug that caused timelines NOT to be saved correctly

--- a/trailr/app/views/trails/_form.html.erb
+++ b/trailr/app/views/trails/_form.html.erb
@@ -115,7 +115,7 @@
 			var data = { title: "", links: [] };
 			data["title"] = $("#title").val();
 			
-			$("#timeline .event").each(function(item) {
+			$(".timeline .event").each(function(item) {
 
 				var headline = $.trim($(".info .headline", this).html());
 				var headline = $.trim($(".headline textarea:first", this).val());
